add: DOM card's style

--- a/index.html
+++ b/index.html
@@ -5,10 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
     <!-- style -->
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <header class="text-center ms_head_width m-auto">
+        <h3 class="pt-5">OUR TEAM</h3>
+        <p class="py-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos quam nam, perferendis iste in architecto fuga id sit, praesentium vero eaque, nostrum</p>
+    </header>
+
+    <main class="container w-75 m-auto">
+        <div class="row flex-wrap text-center text-secondary" id="ms_card_container">
+            <!-- <div class="col-4 p-3">
+                <img src="./img/angela-caroll-chief-editor.jpg" alt="">
+                <h4 class="pt-3 m-0">Angela Caroll</h4>
+                <span>Chief</span>
+            </div> -->
+        </div>
+    </main>
     
     <!-- script -->
     <script src="./assets/js/functions.js"></script>
