fix: photos and descriptions

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header class="text-center ms_head_width m-auto">
         <h3 class="pt-5">OUR TEAM</h3>
-        <p class="py-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos quam nam, perferendis iste in architecto fuga id sit, praesentium vero eaque, nostrum</p>
+        <p class="py-3">Il leggendario team comprende alcuni dei migliori talenti del calcio italiano e internazionale. Questa formazione è sinonimo di esperienza, abilità e passione che hanno incantato i tifosi di tutto il mondo.</p>
     </header>
 
     <main class="container w-75 m-auto">
