fix: DOM style, added background (mi è scesa la lacrimuccia mentre lo facevo)

--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <header class="text-center ms_head_width m-auto">
-        <h3 class="pt-5">OUR TEAM</h3>
-        <p class="py-3">Il leggendario team comprende alcuni dei migliori talenti del calcio italiano e internazionale. Questa formazione è sinonimo di esperienza, abilità e passione che hanno incantato i tifosi di tutto il mondo.</p>
+    <header class="text-center ms_head_width m-auto text-white">
+        <h3 class="pt-3">OUR TEAM</h3>
+        <p class="py-1">Il leggendario team comprende alcuni dei migliori talenti del calcio italiano e internazionale. Questa formazione è sinonimo di esperienza, abilità e passione che hanno incantato i tifosi di tutto il mondo.</p>
     </header>
 
     <main class="container w-75 m-auto">
-        <div class="row flex-wrap text-center text-secondary" id="ms_card_container">
+        <div class="row flex-wrap text-center text-white" id="ms_card_container">
+            <img src="./img/sfondo.png" alt="" id="img-1">
+            <img src="./img/sfondo.png" alt="" id="img-2">
+            <img src="./img/sfondo.png" alt="" id="img-3">
+            <img src="./img/sfondo.png" alt="" id="img-4">
             <!-- <div class="col-4 p-3">
                 <img src="./img/angela-caroll-chief-editor.jpg" alt="">
                 <h4 class="pt-3 m-0">Angela Caroll</h4>
