add: audio with controls

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 <body>
     <header class="text-center ms_head_width m-auto text-white">
         <h3 class="pt-3">OUR TEAM</h3>
-        <p class="py-1">Il leggendario team comprende alcuni dei migliori talenti del calcio italiano e internazionale. Questa formazione è sinonimo di esperienza, abilità e passione che hanno incantato i tifosi di tutto il mondo.</p>
+        <p class="pt-1">Il leggendario team comprende alcuni dei migliori talenti del calcio italiano e internazionale. Questa formazione è sinonimo di esperienza, abilità e passione che hanno incantato i tifosi di tutto il mondo.</p>
     </header>
 
     <main class="container w-75 m-auto">
+        <audio id="audio" src="./img/Juve, Storia di un Grande Amore 2012.mp3"></audio>
         <div class="row flex-wrap text-center text-white" id="ms_card_container">
             <img src="./img/sfondo.png" alt="" id="img-1">
             <img src="./img/sfondo.png" alt="" id="img-2">
@@ -31,6 +32,10 @@
         </div>
     </main>
     
+    <footer class="text-center p-2">
+        <p class="text-secondary">per gestire l'audio premere barra spaziatrice per mettere in pausa <br>oppure un qualsiasi altro tasto riprodurlo</p>
+    </footer>
+
     <!-- script -->
     <script src="./assets/js/functions.js"></script>
     <script src="./assets/js/script.js"></script>
