fix: audio control with only the space-bar

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </main>
     
     <footer class="text-center p-2">
-        <p class="text-secondary">per gestire l'audio premere barra spaziatrice per mettere in pausa <br>oppure un qualsiasi altro tasto riprodurlo</p>
+        <p class="text-secondary">per gestire l'audio premere barra spaziatrice</p>
     </footer>
 
     <!-- script -->
