--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <p class="pt-1">Il leggendario team comprende alcuni dei migliori talenti del calcio italiano e internazionale. Questa formazione è sinonimo di esperienza, abilità e passione che hanno incantato i tifosi di tutto il mondo.</p>
     </header>
 
-    <main class="container w-75 m-auto">
+    <main class="container-md m-auto">
         <audio id="audio" src="./img/Juve, Storia di un Grande Amore 2012.mp3"></audio>
         <div class="row flex-wrap text-center text-white" id="ms_card_container">
-            <img src="./img/sfondo.png" alt="" id="img-1">
-            <img src="./img/sfondo.png" alt="" id="img-2">
-            <img src="./img/sfondo.png" alt="" id="img-3">
-            <img src="./img/sfondo.png" alt="" id="img-4">
+            <img src="./img/sfondo.png" alt="" id="img-1" class="d-none d-sm-block">
+            <img src="./img/sfondo.png" alt="" id="img-2" class="d-none d-sm-block">
+            <img src="./img/sfondo.png" alt="" id="img-3" class="d-none d-sm-block">
+            <img src="./img/sfondo.png" alt="" id="img-4" class="d-none d-sm-block">
             <!-- <div class="col-4 p-3">
                 <img src="./img/angela-caroll-chief-editor.jpg" alt="">
                 <h4 class="pt-3 m-0">Angela Caroll</h4>
